# meta_plugin_protocol

./: Cargo.toml
.github/workflows/: auto-format.yml  ci.yml  notify-downstream.yml
src/: lib.rs
